[package]
name = "Legasy_seach_btc"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bitcoin = "0.30.0"
secp256k1 = {version = "0.27.0", features = ["rand"]}
serde = {version = "1.0.130", features = ["derive"]}
serde-pickle = "1.0"
num_cpus = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }